Closed
Bug 185160
Opened 23 years ago
Closed 23 years ago
[gtk2] crashes due to uninitialized mDrawingarea
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: iamawalrus, Assigned: iamawalrus)
References
Details
(Keywords: crash)
Attachments
(1 file, 1 obsolete file)
|
7.17 KB,
patch
|
Details | Diff | Splinter Review |
There are two crashes due to uninitialized mDrawingarea here. Besides the
printing problem, there are:
- crash when close a tab when the webpage is loading and that webpage needs plugin
1 . at least two opened tabs in content area.
2 . one tab is loading a webpage(the icon of this tab is two rolling arrows)
3 . this webpage content needs a kind plugin but the mozilla didn't install
4 . click right button on tab and select the "close the tab" item in the popup menu.
result:mozilla crashed .
crashes at:
in nsWindow.cpp : 710
GtkWidget *widget =
get_gtk_widget_for_gdk_window(mDrawingarea->inner_window);
mDrawingarea is null.
- crash at tinderbox
1. open tinderbox http://tinderbox.mozilla.org/showbuilds.cgi?tree=SeaMonkey
2. In the tree status table, click any name in the Guilty Column
3. before the tip being shown up, click elsewhere to forbid the tip's shown
result: mozilla crashes
You may need some patience to reproduce this bug.
crashes at:
void*
nsWindow::GetNativeData(PRUint32 aDataType)
{
switch (aDataType) {
case NS_NATIVE_WINDOW:
case NS_NATIVE_WIDGET:
return mDrawingarea->inner_window;
mDrawingarea is null.
It's an easy patch, just checking the pointers before any action. At least,
it's no harm.
Attachment #109380 -
Flags: review?(blizzard)
Updated•23 years ago
|
Attachment #109380 -
Flags: review?(blizzard) → review-
Comment 2•23 years ago
|
||
This patch cleans up a lot of bogus style, removes the check in NativeCreate()
and removes the extra initialization of mIsTopLevel since that's done in the
common widget code.
Attachment #109380 -
Attachment is obsolete: true
Comment 3•23 years ago
|
||
Checked in. Thanks!
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•