Bug #185160.  Crashes due to uninitialized drawing area.  Patch from robin.lu@sun.com.  Cleaned up by me.  Not part of the default build.